# agentvault-solana

./: .gitignore  Anchor.toml  package-lock.json  package.json
programs/agent-vault/: Cargo.toml
programs/agent-vault/src/: errors.rs  events.rs  helpers.rs  lib.rs
programs/agent-vault/src/instructions/: approve_proposal.rs  cancel_proposal.rs  mod.rs  pause.rs  remove_whitelist.rs  send_usdc.rs  stake.rs  unstake.rs
programs/agent-vault/src/state/: mod.rs  stake_account.rs
programs/tandem-wallet/: Cargo.toml
programs/tandem-wallet/src/: events.rs  lib.rs
programs/tandem-wallet/src/instructions/: add_whitelist.rs  approve_proposal.rs  claim_rewards.rs  close_proposal.rs  initialize.rs  initialize_protocol.rs  mod.rs  propose.rs  set_tiers.rs  unpause.rs  update_protocol_config.rs
programs/tandem-wallet/src/state/: proposal.rs  protocol_config.rs  vault.rs  whitelist_entry.rs
skill/: SKILL.md
skill/references/: REFERENCE.md
skill/scripts/: claim-rewards.ts  estimate-tier.ts  generate-keypair.ts  get-proposal.ts  list-proposals.ts  package-lock.json  package.json  protocol-status.ts  send-usdc.ts  stake.ts  tsconfig.json  unstake.ts  vault-balance.ts  vault-status.ts
skill/scripts/idl/: agent_vault.json  tandem_wallet.json
skill/scripts/lib/: client.ts  config.ts  format.ts
tests/: agent-vault.ts  tandem-wallet.ts
